[project]
name = "parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Богдан Чебаненко",email = "bchebanenko@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-auth (>=2.53.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "google-api-python-client (>=2.196.0,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "deepgram-sdk (>=7.1.1,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-genai (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
